Modifying the method for injecting the repo baseurl

--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -17,8 +17,13 @@ RUN chmod +x /entrypoint
 # Put on port 8080
 EXPOSE 8080
 
-# Get repo file
-RUN cd /etc/yum.repos.d && curl -O ${RHEL_7_LATEST_REPO}
+# Get repo URL
+ENV RHEL_7_LATEST_REPO="/etc/yum.repos.d/rhel7-Latest.repo"
+RUN echo "[rhel7-Latest]" >> ${RHEL_7_LATEST_REPO} && \
+    echo "name=RHEL7-Latest" >> ${RHEL_7_LATEST_REPO} && \
+    echo "baseurl=${BASEURL}" >> ${RHEL_7_LATEST_REPO} && \
+    echo "enabled=1" >> ${RHEL_7_LATEST_REPO} && \
+    echo "gpgcheck=0" >> ${RHEL_7_LATEST_REPO}
 
 # Edit yum.conf
 RUN echo "exclude=*.i?86 *.i686" >> /etc/yum.conf
