--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -84,7 +84,8 @@ RUN chmod 777 ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod 777 ${OPENBLAS_TESTS} && \
     chmod 777 ${OPENBLAS_TESTS}/src && \
     chmod 777 /usr/libexec/s2i/run && \
-    chmod 777 /usr/bin/rpmdev-setuptree
+    chmod 777 /usr/bin/rpmdev-setuptree && \
+    chmod 777 /etc/passwd
 
 # This default user is created in the openshift/base-centos7 image
 USER 1001
