--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -78,14 +78,16 @@ RUN git clone https://pagure.io/rpmdevtools.git && \
     rm -rf rpmdevtools
 
 # Give user permissions to modify the 'macros' file + other files to run tests
-RUN chmod 777 ${OPENBLAS_TESTS}/compile_gemm.sh && \
-    chmod 777 ${OPENBLAS_TESTS}/compile_compare.sh && \
+RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
+    chmod +x ${OPENBLAS_TESTS}/compile_compare.sh && \
     chmod 777 ${OPENBLAS_TESTS}/src/gemm_test.c && \
     chmod 777 ${OPENBLAS_TESTS} && \
     chmod 777 ${OPENBLAS_TESTS}/src && \
-    chmod 777 /usr/libexec/s2i/run && \
-    chmod 777 /usr/bin/rpmdev-setuptree && \
-    chmod 777 /etc/passwd
+    chmod +x /usr/libexec/s2i/run && \
+    chmod +x /usr/bin/rpmdev-setuptree && \
+    chmod +w /etc/passwd && \
+    chmod 777 /opt/app-root/* && \
+    chmod 777 /opt/app-root
 
 # This default user is created in the openshift/base-centos7 image
 USER 1001
