--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -86,7 +86,7 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod +x /usr/libexec/s2i/run && \
     chmod +x /usr/bin/rpmdev-setuptree && \
     chmod 777 /etc/passwd && \
-    chown -R 1001:1001 /opt/app-root
+    chown -R 1001:1001 /opt
 
 # This default user is created in the openshift/base-centos7 image
 USER 1001
