--- a/OpenBLAS/Dockerfiles/Dockerfile.openshift
+++ b/OpenBLAS/Dockerfiles/Dockerfile.openshift
@@ -83,7 +83,7 @@ RUN chmod +x ${OPENBLAS_TESTS}/compile_gemm.sh && \
     chmod 777 ${OPENBLAS_TESTS}/src/gemm_test.c && \
     chmod 777 ${OPENBLAS_TESTS} && \
     chmod 777 ${OPENBLAS_TESTS}/src && \
-    chmod +x /usr/libexec/s2i/run && \
+    chmod 777 /usr/libexec/s2i/run && \
     chmod +x /usr/bin/rpmdev-setuptree && \
     chmod 777 /etc/passwd && \
     chown -R 1001:1001 /opt/app-root
